--- a/EDA/annotations.ipynb
+++ b/EDA/annotations.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-01T02:45:41.799987700Z",
-     "start_time": "2024-04-01T02:45:40.134997700Z"
+     "end_time": "2024-04-03T02:41:22.132504300Z",
+     "start_time": "2024-04-03T02:41:21.453194100Z"
     }
    },
    "outputs": [],
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9590f4547f96b433",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-01T02:45:44.363840700Z",
-     "start_time": "2024-04-01T02:45:42.842064500Z"
+     "end_time": "2024-04-03T02:41:24.045147700Z",
+     "start_time": "2024-04-03T02:41:23.248564900Z"
     }
    },
    "outputs": [
@@ -41,7 +41,7 @@
       "text/plain": "  audit_name                        flac_compressed_xwav_object  \\\n0    initial  gs://noaa-passive-bioacoustic/pifsc/audio/pipa...   \n1    initial  gs://noaa-passive-bioacoustic/pifsc/audio/pipa...   \n2    initial  gs://noaa-passive-bioacoustic/pifsc/audio/pipa...   \n3    initial  gs://noaa-passive-bioacoustic/pifsc/audio/pipa...   \n4    initial  gs://noaa-passive-bioacoustic/pifsc/audio/pipa...   \n\n   subchunk_index  label_is_strong  implicit_negatives  label  \\\n0               1             True                True  Other   \n1              13             True                True  Other   \n2               5             True                True  Other   \n3              17             True                True  Other   \n4              22             True                True  Other   \n\n   begin_rel_subchunk  end_rel_subchunk                         begin_utc  \\\n0               0.213             0.213  2005-06-06 13:00:00.213000+00:00   \n1               0.108             0.108  2005-06-06 14:15:00.108000+00:00   \n2               0.143             0.143  2005-07-02 04:00:00.143000+00:00   \n3               0.213             0.213  2005-07-02 05:15:00.213000+00:00   \n4               0.213             0.213  2005-08-01 10:15:00.213000+00:00   \n\n                            end_utc  hawaii_num  \n0  2005-06-06 13:00:00.213000+00:00         NaN  \n1  2005-06-06 14:15:00.108000+00:00         NaN  \n2  2005-07-02 04:00:00.143000+00:00         NaN  \n3  2005-07-02 05:15:00.213000+00:00         NaN  \n4  2005-08-01 10:15:00.213000+00:00         NaN  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>audit_name</th>\n      <th>flac_compressed_xwav_object</th>\n      <th>subchunk_index</th>\n      <th>label_is_strong</th>\n      <th>implicit_negatives</th>\n      <th>label</th>\n      <th>begin_rel_subchunk</th>\n      <th>end_rel_subchunk</th>\n      <th>begin_utc</th>\n      <th>end_utc</th>\n      <th>hawaii_num</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>initial</td>\n      <td>gs://noaa-passive-bioacoustic/pifsc/audio/pipa...</td>\n      <td>1</td>\n      <td>True</td>\n      <td>True</td>\n      <td>Other</td>\n      <td>0.213</td>\n      <td>0.213</td>\n      <td>2005-06-06 13:00:00.213000+00:00</td>\n      <td>2005-06-06 13:00:00.213000+00:00</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>initial</td>\n      <td>gs://noaa-passive-bioacoustic/pifsc/audio/pipa...</td>\n      <td>13</td>\n      <td>True</td>\n      <td>True</td>\n      <td>Other</td>\n      <td>0.108</td>\n      <td>0.108</td>\n      <td>2005-06-06 14:15:00.108000+00:00</td>\n      <td>2005-06-06 14:15:00.108000+00:00</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>initial</td>\n      <td>gs://noaa-passive-bioacoustic/pifsc/audio/pipa...</td>\n      <td>5</td>\n      <td>True</td>\n      <td>True</td>\n      <td>Other</td>\n      <td>0.143</td>\n      <td>0.143</td>\n      <td>2005-07-02 04:00:00.143000+00:00</td>\n      <td>2005-07-02 04:00:00.143000+00:00</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>initial</td>\n      <td>gs://noaa-passive-bioacoustic/pifsc/audio/pipa...</td>\n      <td>17</td>\n      <td>True</td>\n      <td>True</td>\n      <td>Other</td>\n      <td>0.213</td>\n      <td>0.213</td>\n      <td>2005-07-02 05:15:00.213000+00:00</td>\n      <td>2005-07-02 05:15:00.213000+00:00</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>initial</td>\n      <td>gs://noaa-passive-bioacoustic/pifsc/audio/pipa...</td>\n      <td>22</td>\n      <td>True</td>\n      <td>True</td>\n      <td>Other</td>\n      <td>0.213</td>\n      <td>0.213</td>\n      <td>2005-08-01 10:15:00.213000+00:00</td>\n      <td>2005-08-01 10:15:00.213000+00:00</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,28 +59,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7f69a4aa18c7fbd5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-01T01:03:43.778780800Z",
-     "start_time": "2024-04-01T01:03:43.745796300Z"
-    },
-    "collapsed": false
-   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['pifsc/audio/pipan/crosssm/pipan_crosssm_01/audio/Cross_A_01_050606_123845.d20.x.flac',\n",
-       "  'pifsc/audio/pipan/crosssm/pipan_crosssm_01/audio/Cross_A_01_050702_031345.d20.x.flac',\n",
-       "  'pifsc/audio/pipan/crosssm/pipan_crosssm_01/audio/Cross_A_01_050801_074615.d20.x.flac',\n",
-       "  'pifsc/audio/pipan/crosssm/pipan_crosssm_01/audio/Cross_A_01_050801_110500.d20.x.flac',\n",
-       "  'pifsc/audio/pipan/crosssm/pipan_crosssm_01/audio/Cross_A_01_050908_025000.d20.x.flac'],\n",
-       " 5294)"
-      ]
+      "text/plain": "['Cross_A_01_050514_014345',\n 'Cross_A_01_050518_040230',\n 'Cross_A_01_050520_183000',\n 'Cross_A_01_050520_212731',\n 'Cross_A_01_050521_004500']"
      },
-     "execution_count": 13,
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"file_manifest.txt\", \"r\") as f:\n",
+    "    processed_files = f.readlines()\n",
+    "processed_files = [f.strip().split(\".\")[0] for f in processed_files]\n",
+    "processed_files[:5]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-03T02:53:55.403054800Z",
+     "start_time": "2024-04-03T02:53:55.381112900Z"
+    }
+   },
+   "id": "8c4a03ced35c8e88",
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7f69a4aa18c7fbd5",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-03T02:55:15.434061600Z",
+     "start_time": "2024-04-03T02:55:14.889518100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5294\n",
+      "4282 1013\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(['pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120204_054115.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120206_022345.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120207_004500.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120207_230615.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120208_080729.df20.x.flac'],\n 4282)"
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +117,20 @@
    "source": [
     "files = list(df['flac_compressed_xwav_object'].unique())\n",
     "files = [re.sub(\"gs://noaa-passive-bioacoustic/\", \"\", f) for f in files]\n",
+    "print(len(files))\n",
+    "new_files = []\n",
+    "\n",
+    "for file in files:\n",
+    "    hold = False\n",
+    "    for processed_file in processed_files:\n",
+    "        if processed_file in file:\n",
+    "            hold = True\n",
+    "            break\n",
+    "    if not hold:\n",
+    "        new_files.append(file)\n",
+    "    \n",
+    "print(len(new_files), len(processed_files))\n",
+    "files = new_files\n",
     "# files = files[0:1000]\n",
     "\n",
     "def download_many_blobs_with_transfer_manager(bucket_name, blob_names, destination_directory=\"\", workers=8):\n",
@@ -111,28 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "95b3e797483811f",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-01T01:04:28.914783500Z",
-     "start_time": "2024-04-01T01:04:28.863835200Z"
-    },
-    "collapsed": false
+     "end_time": "2024-04-03T02:55:32.969768500Z",
+     "start_time": "2024-04-03T02:55:32.960792700Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['pifsc/audio/pipan/equator/pipan_equator_01/audio/Equator_A_01_120419_235000.df20.x.flac',\n",
-       "  'pifsc/audio/pipan/equator/pipan_equator_01/audio/Equator_A_01_120420_221115.df20.x.flac',\n",
-       "  'pifsc/audio/pipan/equator/pipan_equator_01/audio/Equator_A_01_120421_203230.df20.x.flac',\n",
-       "  'pifsc/audio/pipan/equator/pipan_equator_01/audio/Equator_A_01_120423_233229.df20.x.flac',\n",
-       "  'pifsc/audio/pipan/equator/pipan_equator_01/audio/Equator_A_01_120426_183615.df20.x.flac'],\n",
-       " 4682)"
-      ]
+      "text/plain": "(['pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120204_054115.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120206_022345.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120207_004500.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120207_230615.df20.x.flac',\n  'pifsc/audio/pipan/kingman/pipan_kingman_01/audio/Kingman_A_01_120208_080729.df20.x.flac'],\n 4282)"
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +623,7 @@
    ],
    "source": [
     "bad_results = download_many_blobs_with_transfer_manager(\"noaa-passive-bioacoustic\", \n",
-    "                                                        to_download[:400],\n",
+    "                                                        to_download[:500],\n",
     "                                                        destination_directory=\"D:/SonarData/downloads\",\n",
     "                                                        workers=8)"
    ]
