--- a/EDA/process_outputs.ipynb
+++ b/EDA/process_outputs.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-02T18:37:31.076900500Z",
-     "start_time": "2024-04-02T18:37:31.067924200Z"
+     "end_time": "2024-04-03T02:38:59.664446800Z",
+     "start_time": "2024-04-03T02:38:58.335527100Z"
     }
    },
    "outputs": [],
@@ -46,11 +46,29 @@
   {
    "cell_type": "code",
    "outputs": [],
+   "source": [
+    "downloaded_files = os.listdir(\"D:/SonarData/flat\")\n",
+    "with open(\"file_manifest.txt\", \"a\") as f:\n",
+    "    f.writelines([i+\"\\n\" for i in downloaded_files])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-03T02:39:47.029322800Z",
+     "start_time": "2024-04-03T02:39:47.003384300Z"
+    }
+   },
+   "id": "b7ccfcbf33ffdc82",
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "b7ccfcbf33ffdc82"
+   "id": "61b234d9e951c878"
   }
  ],
  "metadata": {
