--- a/EDA/process_outputs.ipynb
+++ b/EDA/process_outputs.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-03T02:38:59.664446800Z",
-     "start_time": "2024-04-03T02:38:58.335527100Z"
+     "end_time": "2024-04-04T16:52:48.711949800Z",
+     "start_time": "2024-04-04T16:52:47.537454300Z"
     }
    },
    "outputs": [],
@@ -25,7 +25,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "for root, dirs, files in os.walk(\"D:/SonarData/Spectrograms\"):\n",
+    "for root, dirs, files in os.walk(\"D:/SonarData/Spectrograms/more2\"):\n",
     "    root = root.replace(\"\\\\\", \"/\")\n",
     "    classification = root.split(\"/\")[-1]\n",
     "    for file in files:\n",
@@ -36,12 +36,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-02T18:49:11.684669600Z",
-     "start_time": "2024-04-02T18:48:53.308345800Z"
+     "end_time": "2024-04-04T16:53:41.167761600Z",
+     "start_time": "2024-04-04T16:52:49.465089Z"
     }
    },
    "id": "55897e2fa82ce9f3",
-   "execution_count": 22
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -54,12 +54,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-03T02:39:47.029322800Z",
-     "start_time": "2024-04-03T02:39:47.003384300Z"
+     "end_time": "2024-04-04T16:53:53.571574300Z",
+     "start_time": "2024-04-04T16:53:53.550634900Z"
     }
    },
    "id": "b7ccfcbf33ffdc82",
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "cell_type": "code",
