--- a/EDA/process_outputs.ipynb
+++ b/EDA/process_outputs.ipynb
@@ -5,7 +5,6 @@
    "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-04-04T16:52:48.711949800Z",
      "start_time": "2024-04-04T16:52:47.537454300Z"
@@ -23,71 +22,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "55897e2fa82ce9f3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-04T16:53:41.167761600Z",
+     "start_time": "2024-04-04T16:52:49.465089Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
-    "for root, dirs, files in os.walk(\"D:/SonarData/Spectrograms/more2\"):\n",
+    "for root, dirs, files in os.walk(\"D:/SonarData/Spectrograms/more3\"):\n",
     "    root = root.replace(\"\\\\\", \"/\")\n",
     "    classification = root.split(\"/\")[-1]\n",
     "    for file in files:\n",
     "        if file.endswith('.png'):\n",
     "            Path(f\"D:/SonarData/flat_spectrograms/{classification}\").mkdir(parents=True, exist_ok=True)\n",
     "            shutil.copyfile(f\"{root}/{file}\", f\"D:/SonarData/flat_spectrograms/{classification}/{file}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-04T16:53:41.167761600Z",
-     "start_time": "2024-04-04T16:52:49.465089Z"
-    }
-   },
-   "id": "55897e2fa82ce9f3",
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "b7ccfcbf33ffdc82",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-04T16:53:53.571574300Z",
+     "start_time": "2024-04-04T16:53:53.550634900Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "downloaded_files = os.listdir(\"D:/SonarData/flat\")\n",
     "with open(\"file_manifest.txt\", \"a\") as f:\n",
     "    f.writelines([i+\"\\n\" for i in downloaded_files])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-04T16:53:53.571574300Z",
-     "start_time": "2024-04-04T16:53:53.550634900Z"
-    }
-   },
-   "id": "b7ccfcbf33ffdc82",
-   "execution_count": 4
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
+   "id": "61b234d9e951c878",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "id": "61b234d9e951c878"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
